# SnesEmulator

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
Documentation/: reference.txt
Snes/: CMakeLists.txt  isaCodeGenerator.py  tmp
Snes/CodeGeneration/: InstructionClass.py  addressingRules.py  cppNames.py  executionRules.py  generateIsa.py  isaTable.py  tmp
Snes/CpuData/: CpuData.cpp  CpuData.hpp
Snes/CpuRegisters/: CpuRegisters.cpp  CpuRegisters.hpp
Snes/Hardware/: CMakeLists.txt
Snes/Hardware/DecodeUnit/: DecodeUnit.cpp  DecodeUnit.hpp  a.out  test.cpp
Snes/Hardware/FetchUnit/: FetchUnit.cpp  FetchUnit.hpp
Snes/Hardware/Ricoh5A22/: Ricoh5A22.cpp  Ricoh5A22.hpp
Snes/Hardware/SysClock/: SysClock.cpp  SysClock.hpp
Snes/ISA/: ISA.hpp  decodeTable.tmp  generateISA.py
Snes/Isa/: Isa.cpp  Isa.hpp
Snes/MemoryMap/: MemoryMap.hpp
Snes/Registers/: Registers.cpp  Registers.hpp
Snes/Ricoh5A22/: Ricoh5A22.cpp  Ricoh5A22.hpp
Snes/SysClockObserver/: SysClockObserver.cpp  SysClockObserver.hpp
Snes/SystemState/: SystemState.hpp
Snes/Test/: CMakeLists.txt  TestAdc.cpp  TestAddressing.cpp  TestRicoh5A22.cpp  a.out  experiment.cpp
Snes/Types/: Types.hpp
apps/: main.cc
code_generation/: gen_match.rs  gen_ops.rs  generate_instructions.py  generate_match.py  instructions.rs  op_data.json  op_data.py
cpp/apps/: CMakeLists.txt
cpp/include/: ricoh5a22.h
cpp/src/: CMakeLists.txt  alu.cc  ricoh5a22.cc  ricoh5a22.inturrupt.cc  ricoh5a22.lsi.cc  ricoh5a22.pflag.cc  ricoh5a22.transfer.cc  ricoh5a22.undefined.cc  snes_mem.cc
cpp/tools/: define_alu.py  define_branch.py  define_pflag.py  define_stack.py  define_transfer.py  op_data.py
doc/: index.html
doc/addr/: fn.absolute_indexed_y.html  fn.absolute_long_indexed.html  fn.direct_indexed_indirect.html  fn.immediate16.html
doc/cpu/: fn.decrement_stack.html  fn.increment_stack.html  fn.read_byte.html  fn.read_word.html  fn.write_byte.html  index.html  sidebar-items.js
doc/memory/: fn.load.html  (+3 more)
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
hardware/: Cargo.toml
include/: alu.h  cpu_state.h  ricoh5a22.h  snes_mem.h
main/: Cargo.toml
rust/: Cargo.toml
snes/: Cargo.toml
src/: CMakeLists.txt  alu.cc  cpu_state.cc  ricoh5a22.addr.cc  ricoh5a22.alu.cc  ricoh5a22.branch.cc  ricoh5a22.cc  ricoh5a22.jump.cc  ricoh5a22.stack.cc  ricoh5a22_addr.cc  ricoh5a22_ops.cc  snes_mem.cc
test/: CMakeLists.txt  test_alu.cc
test_game/: Cargo.toml
tools/: define_function.py  define_inturrupt.py  define_jmp.py  define_lsi.py  generate_ops.py  generated_op_headers.txt  op_data.py  ricoh5a22.undefined.cc  switch.cc
(+924 files in other folders)
